--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,13 +37,15 @@ jobs:
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         # The password for the key
         keyPassword: ${{ secrets.KEY_PASSWORD }}
-    
-    - uses: actions/upload-artifact@master
+      env:
+        BUILD_TOOLS_VERSION: "30.0.3"
+        
+    - uses: actions/upload-artifact@v2
       with:
         name: release.apk
-        path: ${{  steps.sign_app.output.signedReleaseFile }}
+        path: ${{steps.sign_app.outputs.signedReleaseFile}}
         
-    - uses: actions/upload-artifact@master
+    - uses: actions/upload-artifact@v2
       with:
         name: mapping.txt
         path: app/build/outputs/mapping/release/mapping.txt
