--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,40 +12,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+      - uses: actions/checkout@v2
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew assembleRelease
-      
-    - name: Sign Apk
-      uses: r0adkll/sign-android-release@v1
-      with:
-        # The directory to find your release to sign
-        releaseDirectory: app/build/outputs/apk/release
-        # The key used to sign your release in base64 encoded format
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        # The key alias
-        alias: ${{ secrets.ALIAS }}
-        # The password to the keystore
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        # The password for the key
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-      env:
-        BUILD_TOOLS_VERSION: "30.0.3"
-        
-    - uses: actions/upload-artifact@v2
-      with:
-        name: release.apk
-        path: ${{steps.sign_app.outputs.signedReleaseFile}}
-        
-    - uses: actions/upload-artifact@v2
-      with:
-        name: mapping.txt
-        path: app/build/outputs/mapping/release/mapping.txt
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew assembleRelease
+
+      - name: Sign Apk
+        uses: r0adkll/sign-android-release@v1
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: release.apk
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+
+      - uses: actions/upload-artifact@master
+        with:
+          name: mapping.txt
+          path: app/build/outputs/mapping/release/mapping.txt
