--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,45 +1,27 @@
-name: Android CI
+name: Test and deploy
 
+## Actions that will be executed when you push code currently none
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
+## 2
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  ## 3
+  unit_tests:
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew assembleRelease
+      - name: Unit tests
+        run: ./gradlew test
+  ## 4
+  android_tests:
+    runs-on: [ macos-latest ]
+    steps:
+      - uses: actions/checkout@v2
 
-      - name: Sign Apk
-        uses: r0adkll/sign-android-release@v1
-        id: sign_app
+      - name: Instrumentation Tests
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          releaseDirectory: app/build/outputs/apk/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: release.apk
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
-
-      - uses: actions/upload-artifact@master
-        with:
-          name: mapping.txt
-          path: app/build/outputs/mapping/release/mapping.txt
+          api-level: 29
+          script: ./gradlew connectedAndroidTest
