--- a/.github/workflows/check_and_deploy.yml
+++ b/.github/workflows/check_and_deploy.yml
@@ -3,6 +3,9 @@ name: Test and deploy
 ## Actions that will be executed when you push code currently none
 on:
   push:
+    tags:
+      - 'v*'
+
 
 ## 2
 jobs:
