--- a/.github/workflows/play_store_workflow.yml
+++ b/.github/workflows/play_store_workflow.yml
@@ -11,6 +11,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Generate Release APK
         run: ./gradlew assembleRelease
       - name: Sign APK
