--- a/.github/workflows/play_store_workflow.yml
+++ b/.github/workflows/play_store_workflow.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: release.apk
-          path: ${{steps.sign_app.outputs.signedReleaseFile}}
+          path: app/build/outputs/apk/release/app-artifact-*.apk
       - uses: actions/upload-artifact@master
         with:
           name: mapping.txt
@@ -47,7 +47,7 @@ jobs:
       # 1
       - uses: actions/download-artifact@master
         with:
-          name: release.apk
+         name: app/build/outputs/apk/release/app-artifact-*.apk
       - uses: actions/download-artifact@master
         with:
           name: mapping.txt
@@ -58,7 +58,7 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           # 3
           packageName: com.raywenderlich.android.rwquotes
-          releaseFile: app-release-unsigned-signed.apk
+          releaseFile: app/build/outputs/apk/release/app-artifact-*.apk
           track: internal
           userFraction: 0.50
           mappingFile: mapping.txt
